--- a/services.html
+++ b/services.html
@@ -88,6 +88,34 @@
          </div>
       </div>
       <!-- our service section end -->
+            <!-- our service section start -->
+            <div class="our_section layout_padding">
+               <div class="container">
+                  <h1 class="our_text"><strong>NOS FORMULES</strong></h1>
+                  <div class="row padding_top_0">
+                     <div class="col-lg-4">
+                        <div class="image_7"><a href="#"><img src="images/photo8.jpg"></a></div>
+                        <h2 class="design_text">Confort</h2>
+                        <p class="fact_text">Fini les soucis, on s'occupe de tout. De A jusqu'à Z. Du transport, de la préparation de cartons, du démontage et remontage des meubles, Tout est compris.</p>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="image_7"><a href="#"><img src="images/photo6.jpg"></a></div>
+                        <h2 class="design_text">Dynamique</h2>
+                        <p class="fact_text">En toute sérénité. Vous préparez vos cartons, vous démontez vos meubles ( si besoin), et nous nous occupons du reste. Vous n'aurez plus qu'à déballer vos cartons et mettre en place vos meubles. </p>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="image_7"><a href="#"><img src="images/camionchauffeur.jpg"></a></div>
+                        <h2 class="design_text">Location de camions avec chauffeur</h2>
+                        <p class="fact_text">Vous avez un petit budget ?</br> Les Déménageurs 63 ont pensé à vous...! Nous louons des camions avec chauffeur ! Toutes distances ! au régional, au national ou à l'internatianal.</p>
+                     </div>
+                     <div class="bt_main">
+                        <div class="seemore_bt"><a href="contact.html">Contact</a></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <!-- our service section end -->
+      
       <!-- footer section start -->
       <div class="footer_section layout_padding">
          <div class="container">
