--- a/services.html
+++ b/services.html
@@ -115,6 +115,35 @@
                </div>
             </div>
             <!-- our service section end -->
+                  <!-- our service section end -->
+            <!-- our service section start -->
+            <div class="our_section layout_padding">
+               <div class="container">
+                  <h1 class="our_text"><strong>A LA VENTE</strong></h1>
+                  <div class="row padding_top_0">
+                     <div class="col-lg-4">
+                        <div class="image_7"><a href="#"><img src="images/carton-verre.jpg"></a></div>
+                        <h2 class="design_text">Cartons "spécials verres"</h2>
+                        <p class="fact_text">Nos vendons des cartons pour protéger tous vos verres.  </p>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="image_7"><a href="#"><img src="images/cartonassiette.jpg"></a></div>
+                        <h2 class="design_text">Cartons "spécials assiettes"</h2>
+                        <p class="fact_text">N'hésitez pas à vous renseigner sur les tarifs. Vous serez conquis par la façon de ranger vos assiettes avec autant de simplicité. </p>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="image_7"><a href="#"><img src="images/carton.jpg"></a></div>
+                        <h2 class="design_text">Des cartons de toutes les dimensions</h2>
+                        <p class="fact_text">Nous vendons des cartons de déménagements de toutes dimensions. n'hésitez pas à nous demander les tarifs ou un devis</p>
+                     </div>
+                     <div class="bt_main">
+                        <div class="seemore_bt"><a href="contact.html">Contact</a></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <!-- our service section end -->
+
       
       <!-- footer section start -->
       <div class="footer_section layout_padding">
