--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                <h2 class="addres_text">Où nous contacter</h2>
                <div class="row map_addres">
                   <div class="col-sm-12 col-lg-4">
-                     <div class="map_text"><img src="images/map-icon.png"><span class="map_icon">clermont-Ferrand, Auvergne Rhône Alpes</span></div>
+                     <div class="map_text"><img src="images/map-icon.png"><span class="map_icon">Clermont-Ferrand, Auvergne Rhône Alpes</span></div>
                   </div>
                   <div class="col-sm-12 col-lg-4">
                      <div class="map_text"><img src="images/phone-icon.png"><span class="map_icon">06 .62.90.51.68 ou 07.82.03.13.44</span></div>
@@ -203,12 +203,7 @@
                   </div>
                </div>
                <div class="social_icon">
-                  <ul>
-                     <li><a href="https://www.facebook.com/demenageu"><img src="images/fb-icon.png"></a></li>
-                     <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                     <li><a href="#"><img src="images/in-icon.png"></a></li>
-                     <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-                  </ul>
+                   <a href="https://www.facebook.com/demenageu"><img src="images/fb-icon.png"></a></li>
                </div>
             </div>
          </div>
