--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Gravitao</title>
+      <title>Déménageurs63</title>
       <meta name="keywords" content="Site internet des déménageurs 63 à clermont-Ferrand dans le Puy De Dôme. Déménageur 63 est une entreprise familiale de déménagement en France et à l'internationale. Déménageurs sérieux et soigneux">
       <meta name="description" content="Situé à clermont-Ferrand, déménageurs63 vous propose un déménagements dans toute la France et à l'internationale. Déménageurs63 est une entreprise familiale dans le Puy De Dôme en Fance. Déménagement soigné, devis gratuit, La sécurité et la satisfaction des clients sont notre priorité. Avec les Déménageurs 63 vous avez des formules sur-mesure sans mauvaise surprise.">
       <meta name="author" content="Boulenger Martine-CWDB">
@@ -20,7 +20,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/logo.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
