--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Déménageurs63</title>
+      <title>SAS Déménageurs63</title>
       <meta name="keywords" content="Site internet des déménageurs 63 à clermont-Ferrand dans le Puy De Dôme. Déménageur 63 est une entreprise familiale de déménagement en France et à l'internationale. Déménageurs sérieux et soigneux">
       <meta name="description" content="Situé à clermont-Ferrand, déménageurs63 vous propose un déménagements dans toute la France et à l'internationale. Déménageurs63 est une entreprise familiale dans le Puy De Dôme en Fance. Déménagement soigné, devis gratuit, La sécurité et la satisfaction des clients sont notre priorité. Avec les Déménageurs 63 vous avez des formules sur-mesure sans mauvaise surprise.">
       <meta name="author" content="Boulenger Martine-CWDB">
@@ -78,7 +78,7 @@
                         </div>
                         <div class="col-sm-5">
                            <div class="taital_main">
-                              <h1 class="building_text">Déménageurs 63</h1>
+                              <h1 class="building_text">SAS Déménageurs 63</h1>
                               <h2 class="construction_text">Déménagement en France ou à l'international</h2>
                               <p class="lorem_text">Service de déménagement sur toute la France
                                  </p>
@@ -101,7 +101,7 @@
                         </div>
                         <div class="col-sm-5">
                            <div class="taital_main">
-                              <h1 class="building_text">Avec Déménageurs 63</h1>
+                              <h1 class="building_text">SAS Déménageurs 63</h1>
                               <h2 class="construction_text">C'est un déménagement sans stress</h2>
                               <p class="lorem_text"> Ils répondront à votre demande et prendront en charge votre déménagement afin de rester l'esprit tranquille. </p> </p>
                               <div class="contact_bt"><a href="contact.html">Contactez nous</a></div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="col-sm-5">
                            <div class="taital_main">
-                              <h1 class="building_text">Avec Déménageurs 63</h1>
+                              <h1 class="building_text">SAS Déménageurs 63</h1>
                               <h2 class="construction_text">La satisfaction du client est une priorité</h2>
                               <p class="lorem_text">Votre déménagement aura le sourire.  </p>
                               <div class="contact_bt"><a href="contact.html">Contactez nous</a></div>
@@ -146,9 +146,17 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="about_taital">
-                     <h1 class="about_text">Déménageurs63</h1>
+                     <h1 class="about_text">SAS Déménageurs63</h1>
                      <p class="long_text">Chargement soigné dans un camion capitonné </br></br>
                         Protection total des meubles et électroménagers </br></br>
+                        Déménageurs 63 c'est une équipe techniciens dans divers domaines :</br>
+                        - Techniciens en démontage et remontage de tout type de mobiliers.</br>
+                        - Techniciens en emballage.</br>
+                        - Spécialistes en manutention de coffres forts.</br>
+                        - Le transport des objets lourd</br>
+                        - Livraisons et installations des meubles et électroménagers</br></br>
+                        Les Déménageurs 63
+                        c'est aussi les livraisons, débarras, transports , manutentions et des gardes meubles</br></br>
                         Assurance professionnelle comprise </br></br>
                         Nous vous proposons des formules adaptées à votre budget</br></br>
                         Pour tout renseignement n'hésitez pas à nous contacter 7/7 </br></br>
